Added login feature

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdctest",
+  "name": "23s1-wdc-ug109-arseny-4",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "google-auth-library": "^8.8.0",
+    "http-errors": "~1.6.3",
+    "install": "^0.13.0",
+    "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "npm": "^9.6.7"
   }
 }
