--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.8.0",
     "http-errors": "~1.6.3",
     "install": "^0.13.0",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "npm": "^9.6.7"
