--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-server": "^0.7.0",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.8.0",
     "http-errors": "~1.6.3",
